--- a/realestate/app/globals.css
+++ b/realestate/app/globals.css
@@ -6,4 +6,23 @@
     .NavBarLi{
         @apply hover:underline hover:text-blue-600 duration-200
     }
+    .typewriter {
+        overflow: hidden; 
+        border-right: 0.15em solid; 
+        white-space: nowrap; 
+        margin: 0 auto; 
+        letter-spacing: 0.10em; 
+        animation: typing 3.5s steps(40, end), blink-caret 0.75s step-end infinite;
+      }
+      
+      @keyframes typing {
+        from { width: 0; }
+        to { width: 100%; }
+      }
+      
+      @keyframes blink-caret {
+        from, to { border-color: transparent; }
+        50% { border-color: black; }
+      }
+      
 }
