--- a/realestate/app/globals.css
+++ b/realestate/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer components{
     .NavBarLi{
-        @apply hover:underline hover:text-blue-600 duration-200
+        @apply hover:text-blue-600 duration-200
     }
 
     .Flist{
